# school-library

./: .env.example  .flake8  .gitattributes  .gitignore  AZURE_DEPLOYMENT_GUIDE.md  AZURE_DEPLOYMENT_GUIDE_AR.md  AZURE_DEPLOYMENT_TESTING.md  CI_CD_PIPELINES.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DOCKER_COMMANDS.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.app  Dockerfile.test  ENVIRONMENTS_AND_SECRETS.md  FEATURE_DATABASE_BRANCH.md  INDEX.md  MONGODB_ATLAS_GUIDE.md  MONGODB_INTEGRATION_REPORT.md  MONGODB_SETUP.md  Makefile  QUICKSTART.md  QUICK_AZURE_SETUP.md  QUICK_START.md  QUICK_START_ATLAS.md  README.md  SUMMARY.md  TESTING_GUIDE.md  TEST_RESULTS.md  check_mongodb_data.py  commit-msg.txt  docker-compose.app.yml  docker-compose.override.yml.example  docker-compose.production.yml  docker-compose.yml  fix_final.py  main.py  pre-commit-config.txt  (+10 more)
.azure/: deployment-config.md
.github/workflows/: azure-deploy.md  azure-deploy.yml  cd.yml  ci-cd.yaml  ci-cd.yml  ci.yml  integration.yml  quality.yml  release.md  release.yml  schlibrary-AutoDeployTrigger-984dcb90-327f-4b7b-aeaf-7e22e18dd35e.yml  sclibrary-AutoDeployTrigger-b835ed8a-e655-40bb-b932-3c5e9346ca99.yml  tests.yml  (+3 more)
archived/: FINAL_REPORT.md  SETUP_COMPLETE.md  STATUS_CHECK.md
cli/: __init__.py  commands.py
config/: __init__.py  database.py
core/: __init__.py  factory.py  repository.py  strategy.py
docs/: API.md  DATABASE.md  FEATURES.md  MONGODB_SETUP.md  PROJECT_STRUCTURE.md  SETUP.md
lib_logging/: __init__.py  logger.py
models/: __init__.py  book.py  role.py  user.py
scripts/: apit.py  check_import_conftest.py  check_mongo.py  check_quality.py  check_storage.py  docker-build.ps1  docker-build.sh  format.ps1  format.sh  init_db.py  init_mongodb.js  init_mongodb.py  inspect_books.py  inspect_conftest.py  lint.ps1  lint.sh  migrate_json_to_mongo.py  seed_mongodb.py  test.ps1  test.sh  wait_mongo.py
services/: __init__.py  book_service.py  borrow_service.py  user_service.py
storage/: __init__.py  book_storage.py  factory.py  interfaces.py  user_storage.py
storage/fake/: book_storage.py  user_storage.py
tests/: __init__.py  conftest.py  conftest_mongodb.py  test_cli_commands.py  test_integration.py  test_models.py  test_mongodb_book_storage.py  test_mongodb_user_storage.py  test_services.py  test_validation.py
validation/: __init__.py  book_validator.py  id_validator.py  isbn_validator.py  user_validator.py
web/: __init__.py  app_server.py  docs.html  logs.html  openapi.yaml  server.py  swagger.html
(+19 files in other folders)
