[tool.poetry]
name = "school-library"
version = "1.0.0"
description = "Electronic Library Management System - CLI & Web"
authors = ["School Library Team"]
readme = "README.md"
packages = [
    { include = "cli", from = "." },
    { include = "core", from = "." },
    { include = "lib_logging", from = "." },
    { include = "models", from = "." },
    { include = "services", from = "." },
    { include = "storage", from = "." },
    { include = "validation", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
prometheus_client = ">=0.19.0"
pymongo = ">=4.6.0"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
black = "*"
isort = "*"
flake8 = "*"
pylint = "*"
mypy = "*"
pre-commit = "*"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

